tests/should-fail/flags/rb-annotation-2.j
//# +rb
function foo takes handle h returns integer
	return h
	return 0
endfunction

// just a plain old comment
function bar takes handle h returns integer
	return h
	return 0
endfunction